tests/snapshots/examples_fixtures/type_system__failing__185_runtime_boundary_arg_e1004.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/185_runtime_boundary_arg_e1004.flx
== compile ==
failed (module)
== diagnostics ==
Error[E018]: Import Not Found

Cannot find module `TypeSystem.BoundaryUnknown` to import.

  examples/type_system/failing/185_runtime_boundary_arg_e1004.flx:1:1
  |
1 | import TypeSystem.BoundaryUnknown
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `TypeSystem.BoundaryUnknown.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `TypeSystem.BoundaryUnknown` under roots: examples/type_system/failing, src (imported from examples/type_system/failing/185_runtime_boundary_arg_e1004.flx).
== stdout ==
<not executed>
