tests/snapshots/examples_fixtures/type_system__failing__195_effect_row_invalid_subtract_e421.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/195_effect_row_invalid_subtract_e421.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/type_system/failing/195_effect_row_invalid_subtract_e421.flx:50:5
   |
50 |     run_filtered(io_console_work)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     ----------------------------- parameter 1 has type `() -> Unit with Console, FileSystem, Stdin, Env`

   |     ----------------------------- this type mismatch is reported here

Note:
  expected parameter type: () -> Unit with FileSystem, Stdin, Env
  found parameter type: () -> Unit with Console, FileSystem, Stdin, Env
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `() -> Unit with FileSystem, Stdin, Env` consistently.


Note: Downstream Errors Suppressed

I hid 1 later-stage diagnostic (1 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.
== stdout ==
<not executed>
